--- a/script2.html
+++ b/script2.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>javascriptbrowser - script</title>
+	<title>javascriptbrowser - script2</title>
+	<script src="script2.js"></script>
 </head>
 <body>
 	<input type="button" id="hw" value="Hello world">
-	<script src="./script.js"></script>
 </body>
 </html>
