--- a/htmlelement.html
+++ b/htmlelement.html
@@ -9,7 +9,8 @@
 	<ul>
   	<li>HTML</li>
   	<li>CSS</li>
-  	<li id="active">JavaScript</li>
+  	<li id="active" class="important current">JavaScript
+    </li>
 	</ul>
 
 	<a id="anchor" href="https://www.google.co.kr/">
@@ -25,7 +26,8 @@
 	<input type="button" id="button" value="button"> <br>
 
 	<script>
-		var li = document.getElementById('active');
+    var li = document.getElementById('active');
+    
     alert(li.constructor.name); // HTMLLIElement
     console.log(li.constructor.name); // HTMLLIElement
     document.write(li.constructor.name+"<br>"); 
