--- a/nodeapi.html
+++ b/nodeapi.html
@@ -43,22 +43,33 @@
 		// console.log(6, ul.childNodes[1]); 
 		// console.log(7, ul.parentNode);
 
-		function traverse(target, callback){
-    	if(target.nodeType === 1){
-        //if(target.nodeName === 'A')
-        callback(target);
-        var c = target.childNodes;
-        	for(var i=0; i<c.length; i++){
-          	traverse(c[i], callback);       
-        }
-      }
+		// function traverse(target, callback){
+  //   	if(target.nodeType === 1){
+  //       //if(target.nodeName === 'A')
+  //       callback(target);
+  //       var c = target.childNodes;
+  //       	for(var i=0; i<c.length; i++){
+  //         	traverse(c[i], callback);       
+  //       }
+  //     }
+  //   }
+  function traverse(target, callback) {
+  	if(target.nodeType === Node.ELEMENT_NODE) {
+  		if(target.nodeName === 'A')
+  				callback(target);
+  		var c = target.childNodes;
+  			for(var i = 0; i < c.length; i++) {
+  				traverse(c[i], callback);
+  			}
+  		}
     }
+
     traverse(document.getElementById('start'), 
     	function(elem){
     		alert(elem);
     		console.log(elem);
     		document.write(elem)+"<br>";
-			}); 
+			});
 	</script>
 </body>
 </html>
