--- a/nodeapi.html
+++ b/nodeapi.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>javascriptbrowser - nodeapi</title>
 </head>
-<body id="start">
-	<ul>
+<body>
+	<!-- <ul>
     <li>
     	<a href="./532">html</a>
   	</li> 
@@ -27,7 +27,27 @@
       	</li>
       </ul>
 		</li>
+	</ul> -->
+
+	<!-- <ul id="target">
+  	<li>HTML</li>
+    <li>CSS</li>
 	</ul>
+
+	<input type="button" onclick="callAppendChild();" 
+	value="appendChild()">
+	<input type="button" onclick="callInsertBefore();" 
+	value="insertBefore()"> -->
+
+	<ul>
+  	<li>HTML</li>
+  	<li>CSS</li>
+  	<li id="target">JavaScript</li>
+	</ul>
+
+	<input type="button" onclick="callRemoveChild();" 
+	value="removeChild()"> <br>
+	<input type="button" onclick="callReplaceChild();" value="replaceChild()"> <br>
 
 	<script>
 		// var s = document.getElementById('start');
@@ -53,23 +73,55 @@
   //       }
   //     }
   //   }
-  function traverse(target, callback) {
-  	if(target.nodeType === Node.ELEMENT_NODE) {
-  		if(target.nodeName === 'A')
-  				callback(target);
-  		var c = target.childNodes;
-  			for(var i = 0; i < c.length; i++) {
-  				traverse(c[i], callback);
-  			}
-  		}
-    }
+  // function traverse(target, callback) {
+  // 	if(target.nodeType === Node.ELEMENT_NODE) {
+  // 		if(target.nodeName === 'A')
+  // 				callback(target);
+  // 		var c = target.childNodes;
+  // 			for(var i = 0; i < c.length; i++) {
+  // 				traverse(c[i], callback);
+  // 			}
+  // 		}
+  //   }
 
-    traverse(document.getElementById('start'), 
-    	function(elem){
-    		alert(elem);
-    		console.log(elem);
-    		document.write(elem)+"<br>";
-			});
+   //  traverse(document.getElementById('start'), 
+   //  	function(elem){
+   //  		alert(elem);
+   //  		console.log(elem);
+   //  		document.write(elem)+"<br>";
+			// });
+
+	 /*
+	 function callAppendChild(){
+   	var target = document.getElementById('target');
+   	var li = document.createElement('li');
+   	var text = document.createTextNode('JavaScript');
+   	li.appendChild(text);
+   	target.appendChild(li);
+   }
+ 
+   function callInsertBefore(){
+   	var target = document.getElementById('target');
+   	var li = document.createElement('li');
+   	var text = document.createTextNode('jQuery');
+   	li.appendChild(text);
+   	target.insertBefore(li, target.firstChild);
+   }
+   */
+
+   // function callRemoveChild(){
+   // 	var target = document.getElementById('target');
+   // 	target.parentNode.removeChild(target);
+   // }
+
+   function callReplaceChild(){
+   		var a = document.createElement('a');
+    	a.setAttribute('href', 'http://opentutorials.org/module/904/6701');
+    	a.appendChild(document.createTextNode('Web browser JavaScript'));
+ 
+   		var target = document.getElementById('target');
+    	target.replaceChild(a,target.firstChild);
+   	}
 	</script>
 </body>
 </html>
