--- a/text.html
+++ b/text.html
@@ -4,34 +4,77 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>javascriptbrowser - text</title>
+	<style>
+  	#target{
+    	font-size:77px;
+    	font-family: georgia;
+    	border-bottom:1px solid black;
+    	padding-bottom:10px;
+    }
+    p{
+    	margin:5px;
+    }
+	</style>
 </head>
 <body>
-	<p id="target1"><span>Hello world</span></p>
+	<!-- <p id="target1"><span>Hello world</span></p>
 	<p id="target2">
   	<span>Hello world</span>
-	</p>
+	</p> -->
 
-	<ul>
+	<!-- <ul>
     <li id="target">html</li> 
     <li>css</li>
     <li>JavaScript</li>
-	</ul>
+	</ul> -->
+
+	<p id="target">Cording everybody!</p>
+	<p> data : <input type="text" id="datasource" value="JavaScript"></p>
+	<p>   start :<input type="text" id="start" value="5">
+	</p>
+	<p> end : <input type="text" id="end" value="5"></p>
+	<p><input type="button" value="appendData(data)" onclick="callAppendData()">
+	<input type="button" value="deleteData(start,end)" onclick="callDeleteData()">
+	<input type="button" value="insertData(start,data)" onclick="callInsertData()">
+	<input type="button" value="replaceData(start,end,data)" onclick="callReplaceData()">
+	<input type="button" value="substringData(start,end)" onclick="callSubstringData()"></p>
 
 	<script>
-		var t1 = document.getElementById('target1').firstChild;
-		var t2 = document.getElementById('target2').firstChild;
+		// var t1 = document.getElementById('target1').firstChild;
+		// var t2 = document.getElementById('target2').firstChild;
  
-		console.log(t1.firstChild.nodeValue);
-		try{
-    	console.log(t2.firstChild.nodeValue);   
-		} catch(e){
-    	console.log(e);
-		}
-		console.log(t2.nextSibling.firstChild.nodeValue);
+		// console.log(t1.firstChild.nodeValue);
+		// try{
+  //   	console.log(t2.firstChild.nodeValue);   
+		// } catch(e){
+  //   	console.log(e);
+		// }
+		// console.log(t2.nextSibling.firstChild.nodeValue);
 
-		var t = document.getElementById('target').firstChild;
-    console.log(t.nodeValue);
-    console.log(t.data);
+		// var t = document.getElementById('target').firstChild;
+  //   console.log(t.nodeValue);
+  //   console.log(t.data);
+
+     var target = document.getElementById('target').firstChild;
+     var data = document.getElementById('datasource');
+     var start = document.getElementById('start');
+     var end = document.getElementById('end');
+
+    	function callAppendData(){
+      	target.appendData(data.value);
+    	}
+    	function callDeleteData(){
+      	target.deleteData(start.value, end.value);
+    	}
+    	function callInsertData(){
+      	target.insertData(start.value, data.value); 
+    	}
+    	function callReplaceData(){
+     		target.replaceData(start.value, end.value, data.value);
+    	}
+    	function callSubstringData(){
+      	alert(target.substringData(start.value, end.value));
+    	}
 	</script>
 </body>
 </html>
