--- a/text.html
+++ b/text.html
@@ -5,16 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>javascriptbrowser - text</title>
 	<style>
-  	#target{
-    	font-size:77px;
-    	font-family: georgia;
-    	border-bottom:1px solid black;
-    	padding-bottom:10px;
+    body{
+    	padding:0;
+    	margin:0;
     }
-    p{
-    	margin:5px;
+    div{
+    	border:50px solid #1065e6;
+    	padding:50px;
+    	margin:50px;
     }
-	</style>
+    #target{
+    	width:100px;
+    	height:100px;
+    }
+	</style> 
 </head>
 <body>
 	<!-- <p id="target1"><span>Hello world</span></p>
@@ -28,7 +32,7 @@
     <li>JavaScript</li>
 	</ul> -->
 
-	<p id="target">Cording everybody!</p>
+	<!-- <p id="target">Cording everybody!</p>
 	<p> data : <input type="text" id="datasource" value="JavaScript"></p>
 	<p>   start :<input type="text" id="start" value="5">
 	</p>
@@ -37,7 +41,12 @@
 	<input type="button" value="deleteData(start,end)" onclick="callDeleteData()">
 	<input type="button" value="insertData(start,data)" onclick="callInsertData()">
 	<input type="button" value="replaceData(start,end,data)" onclick="callReplaceData()">
-	<input type="button" value="substringData(start,end)" onclick="callSubstringData()"></p>
+	<input type="button" value="substringData(start,end)" onclick="callSubstringData()"></p> -->
+	<div>
+		<div id="target">
+  		Coding
+		</div>
+	</div>
 
 	<script>
 		// var t1 = document.getElementById('target1').firstChild;
@@ -55,26 +64,38 @@
   //   console.log(t.nodeValue);
   //   console.log(t.data);
 
-     var target = document.getElementById('target').firstChild;
-     var data = document.getElementById('datasource');
-     var start = document.getElementById('start');
-     var end = document.getElementById('end');
+     // var target = document.getElementById('target').firstChild;
+     // var data = document.getElementById('datasource');
+     // var start = document.getElementById('start');
+     // var end = document.getElementById('end');
 
-    	function callAppendData(){
-      	target.appendData(data.value);
-    	}
-    	function callDeleteData(){
-      	target.deleteData(start.value, end.value);
-    	}
-    	function callInsertData(){
-      	target.insertData(start.value, data.value); 
-    	}
-    	function callReplaceData(){
-     		target.replaceData(start.value, end.value, data.value);
-    	}
-    	function callSubstringData(){
-      	alert(target.substringData(start.value, end.value));
-    	}
+    	// function callAppendData(){
+     //  	target.appendData(data.value);
+    	// }
+    	// function callDeleteData(){
+     //  	target.deleteData(start.value, end.value);
+    	// }
+    	// function callInsertData(){
+     //  	target.insertData(start.value, data.value); 
+    	// }
+    	// function callReplaceData(){
+     // 		target.replaceData(start.value, end.value, data.value);
+    	// }
+    	// function callSubstringData(){
+     //  	alert(target.substringData(start.value, end.value));
+    	// }
+
+    	/*
+    	var t = document.getElementById('target');
+			console.log(t.getBoundingClientRect());
+			*/
+
+			var t = document.getElementById('target');
+			console.log(t.getBoundingClientRect());
+			console.log(t.offsetParent);
+
+			var t = document.getElementById('target');
+			console.log('clientWidth:', t.clientWidth, 'clientHeight:', t.clientHeight);
 	</script>
 </body>
 </html>
