--- a/event2.html
+++ b/event2.html
@@ -4,12 +4,28 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>javascriptbrowser - event2</title>
-	<!-- <style>
-  	html{border:5px solid red;padding:30px;}
-  	body{border:5px solid green;padding:30px;}
-  	fieldset{border:5px solid blue;padding:30px;}
-  	input{border:5px solid black;padding:30px;}
-	</style> -->
+	<style>
+		body{
+    	background-color: black;
+    	color:white;
+    }
+    #target{
+    	width:200px;
+    	height:200px;
+    	background-color: green;
+    	margin:10px;
+    }
+    table{
+    	border-collapse: collapse;
+    	margin:10px;
+    	float: left;
+    	width:200px;
+    }
+    td, th{
+    	padding:10px;
+    	border:1px solid gray;
+    }
+	</style>
 </head>
 <body>
 	<!-- <input type="button" id="target" value="button"> <br> -->
@@ -44,8 +60,82 @@
 
 	<!-- <input id="target" type="name"> -->
 
-	<p id="target">Hello</p>
-	<img src="https://s3-ap-northeast-1.amazonaws.com/opentutorialsfile/course/94.png">
+	<!-- <p id="target">Hello</p>
+	<img src="https://s3-ap-northeast-1.amazonaws.com/opentutorialsfile/course/94.png"> -->
+
+	<div id="target">
+ 
+        </div>
+        <table>
+            <tr>
+                <th>event type</th>
+                <th>info</th>
+            </tr>
+            <tr>
+                <td>click</td>
+                <td id="elmclick"></td>
+            </tr> 
+            <tr>
+                <td>dblclick</td>
+                <td id="elmdblclick"></td>
+            </tr>
+            <tr>
+                <td>mousedown</td>
+                <td id="elmmousedown"></td>
+            </tr>         
+            <tr>
+                <td>mouseup</td>
+                <td id="elmmouseup"></td>
+            </tr>         
+            <tr>
+                <td>mousemove</td>
+                <td id="elmmousemove"></td>
+            </tr>         
+            <tr>
+                <td>mouseover</td>
+                <td id="elmmouseover"></td>
+            </tr>         
+            <tr>
+                <td>mouseout</td>
+                <td id="elmmouseout"></td>
+            </tr>
+            <tr>
+                <td>contextmenu</td>
+                <td id="elmcontextmenu"></td>
+            </tr>         
+        </table>
+        <table>
+            <tr>
+                <th>key</th>
+                <th>info</th>
+            </tr>
+            <tr>
+                <td>event.altKey</td>
+                <td id="elmaltkey"></td>
+            </tr>
+            <tr>
+                <td>event.ctrlKey</td>
+                <td id="elmctrlkey"></td>
+            </tr>
+            <tr>
+                <td>event.shiftKey</td>
+                <td id="elmshiftKey"></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <th>position</th>
+                <th>info</th>
+            </tr>
+            <tr>
+                <td>event.clientX</td>
+                <td id="elemclientx"></td>
+            </tr>
+            <tr>
+                <td>event.clientY</td>
+                <td id="elemclienty"></td>
+            </tr>
+        </table>
 
 	<script>
 	// var t = document.getElementById('target');
@@ -149,8 +239,35 @@
   // 		document.getElementById('result').innerHTML=event.target.value;
 		// });
 
-		var t = document.getElementById('target');
-    console.log(t);
+		// var t = document.getElementById('target');
+  //   console.log(t);
+
+  var t = document.getElementById('target');
+        function handler(event){
+            var info = document.getElementById('elm'+event.type);
+            var time = new Date();
+            var timestr = time.getMilliseconds();
+            info.innerHTML = (timestr);
+            if(event.altKey){
+                document.getElementById('elmaltkey').innerHTML = timestr;
+            }
+            if(event.ctrlKey){
+                document.getElementById('elmctrlkey').innerHTML = timestr;
+            }
+            if(event.shiftKey){
+                document.getElementById('elmshiftKey').innerHTML = timestr;
+            }
+            document.getElementById('elemclientx').innerHTML = event.clientX;
+            document.getElementById('elemclienty').innerHTML = event.clientY;
+        }
+        t.addEventListener('click', handler);
+        t.addEventListener('dblclick', handler);
+        t.addEventListener('mousedown', handler);
+        t.addEventListener('mouseup', handler);
+        t.addEventListener('mousemove', handler);
+        t.addEventListener('mouseover', handler);
+        t.addEventListener('mouseout', handler);
+        t.addEventListener('contextmenu', handler);
 	</script>
 </body>
 </html>
