--- a/jqueryevent, jqueryapi.html
+++ b/jqueryevent, jqueryapi.html
@@ -22,7 +22,11 @@
   	</li>
 	</ul> -->
 
-	<input type="text" id="target">
+	<!-- <input type="text" id="target">
+	<p id="status"></p> -->
+
+	<input type="text" id="target"></textarea>
+	<input id="remove"  type="button" value="remove">
 	<p id="status"></p>
 	<script>
 		// var target = document.getElementById('pure');
@@ -47,9 +51,29 @@
   // 	alert(this.tagName);
   // 	console.log(this.tagName);
   // })
+  // var handler = function(e) {
+  // 	$('#status').html(e.type);
+  // }
+  // $('#target').on('focus', handler).on('blur', handler);
+  // $('#target').on(
+  // 	{
+  // 		'focus' : handler,
+  // 		'blur' : handler
+  // 	}
+  // )
+  	// $('#target').on('focus blur', function(e){
+  	// 	$('#status').html(e.type);
+  	// })
 
-  	$('#target').on('focus blur', function(e){
-  		$('#status').html(e.type);
+  	var handler = function(e){
+    	$('#status').text(e.type+Math.random());
+  	};
+  	$('#target').on('focus blur', handler)
+  	$('#target').on('focus', function(e) {
+  		alert(1);
+  	});
+  	$('#remove').on('click', function(e) {
+  		$('#target').off('focus blur');
   	})
 	</script>
 </body>
